Post block excerpt word break to prevent overflow

--- a/wp-content/themes/reconasia/assets/_scss/components/_post-block.scss
+++ b/wp-content/themes/reconasia/assets/_scss/components/_post-block.scss
@@ -112,6 +112,7 @@
     margin-top: rem(8);
     margin-bottom: rem(16);
     color: $color-black-165;
+    word-break: break-all;
     @extend %text-style-paragraph-large-short-sans;
 
     .archive__featured & {
@@ -150,7 +151,6 @@
         background: $color-bg-light-400;
       }
     }
-
   }
 
   .post-meta__date {
